[gd_scene load_steps=17 format=3 uid="uid://bmxuxrs2gul8j"]

[ext_resource type="Texture2D" uid="uid://cfp4bv7cbyt2s" path="res://Wooden_Board.png" id="1_tjn2e"]
[ext_resource type="Texture2D" uid="uid://msct85umf8cc" path="res://Light Switch/NEWoff.png" id="2_4sclt"]
[ext_resource type="Texture2D" uid="uid://cq0aqj0cqneo" path="res://Light Switch/ToggledOn.png" id="2_7a4el"]
[ext_resource type="Script" uid="uid://l08ibnyb6wcx" path="res://Light Switch/light_switch.gd" id="3_4sclt"]
[ext_resource type="Texture2D" uid="uid://cq3nolvuesd6n" path="res://Light Switch/ToggledOff.png" id="3_kwhh3"]
[ext_resource type="AudioStream" uid="uid://h8idif0mptim" path="res://Light Switch/light_switch_on.mp3" id="4_ue4rx"]
[ext_resource type="AudioStream" uid="uid://dp2611llp4fel" path="res://Light Switch/light_switch_off.mp3" id="5_sjiej"]
[ext_resource type="Script" uid="uid://c31ytq03id6qp" path="res://Fidget Spinner/fidget_spinner.gd" id="8_4sv2p"]
[ext_resource type="Texture2D" uid="uid://bb3o5h7g5t6a1" path="res://Fidget Spinner/Fidget_Spinner.png" id="8_sjiej"]
[ext_resource type="AudioStream" uid="uid://dvj4kyxqa8b1n" path="res://Fidget Spinner/fidget_spinner_click.wav" id="10_0osx7"]
[ext_resource type="AudioStream" uid="uid://bulbyln1a7ygq" path="res://Fidget Spinner/New spinning effect.wav" id="11_62wn8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4sclt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7a4el"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7a4el"]
texture = ExtResource("2_7a4el")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kwhh3"]
texture = ExtResource("3_kwhh3")

[sub_resource type="CircleShape2D" id="CircleShape2D_4sv2p"]
radius = 83.3847

[node name="Main Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="WoodenBoard" type="Sprite2D" parent="."]
position = Vector2(576, 320)
scale = Vector2(1.125, 0.625)
texture = ExtResource("1_tjn2e")
metadata/_edit_lock_ = true

[node name="LightSwitch" type="Sprite2D" parent="."]
position = Vector2(251, 212)
scale = Vector2(0.404615, 0.439136)
texture = ExtResource("2_4sclt")
script = ExtResource("3_4sclt")

[node name="SwitchHitbox" type="Button" parent="LightSwitch"]
custom_minimum_size = Vector2(60, 50)
offset_left = -31.0
offset_top = -78.0
offset_right = 32.0
offset_bottom = 74.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_4sclt")
toggle_mode = true
flat = true
metadata/_edit_lock_ = true

[node name="LSon" type="AudioStreamPlayer" parent="LightSwitch"]
stream = ExtResource("4_ue4rx")

[node name="LSoff" type="AudioStreamPlayer" parent="LightSwitch"]
stream = ExtResource("5_sjiej")

[node name="CheckButton" type="Button" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 272.0
offset_right = 908.0
offset_bottom = 404.0
scale = Vector2(0.944377, 0.911165)
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a4el")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_7a4el")
theme_override_styles/hover = SubResource("StyleBoxTexture_kwhh3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7a4el")
theme_override_styles/normal = SubResource("StyleBoxTexture_kwhh3")
toggle_mode = true

[node name="FidgetSpinner" type="RigidBody2D" parent="."]
position = Vector2(473, 216)
input_pickable = true
gravity_scale = 0.0
angular_damp_mode = 1
angular_damp = 0.5
script = ExtResource("8_4sv2p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FidgetSpinner"]
shape = SubResource("CircleShape2D_4sv2p")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="FidgetSpinner"]
scale = Vector2(0.347917, 0.347917)
texture = ExtResource("8_sjiej")
offset = Vector2(-0.115, -33.935)
region_enabled = true
region_rect = Rect2(9.12494, 18.2716, 487.545, 453.871)

[node name="ClickSound" type="AudioStreamPlayer" parent="FidgetSpinner"]
stream = ExtResource("10_0osx7")

[node name="SpinSound" type="AudioStreamPlayer" parent="FidgetSpinner"]
stream = ExtResource("11_62wn8")
pitch_scale = 2.5

[connection signal="toggled" from="LightSwitch/SwitchHitbox" to="LightSwitch" method="_on_switch_hitbox_toggled"]
[connection signal="input_event" from="FidgetSpinner" to="FidgetSpinner" method="_on_input_event"]
